# fighting-game

./: .gitignore  Cargo.toml  DESIGN.md  Justfile  README.md  config.ron
.github/workflows/: rust.yml
assets/characters/: Bridget.prototype.ron  Player1.prototype.ron  Player2.prototype.ron
assets/characters/Test/: Test.prototype.ron  idle.titan
assets/characters/test/: idle.titan
src/: main.rs  main_menu.rs  player.rs  settings.rs  test.rs
src/game/: character.rs  control.rs  mod.rs  physics.rs  player.rs  sprite.rs
src/network/: discord.rs  ggrs.rs  mod.rs
src/players/: player.rs
src/sound/: mod.rs  music.rs
src/ui/: camera.rs  debug.rs  menu.rs  mod.rs  splashscreen.rs
