[package]
name = "fighting-game"
repository = "https://github.com/23marabi/fighting-game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_framepace = "0.12.1"
bevy_rapier2d = { version = "*", features = [ "enhanced-determinism", "debug-render-2d" ] }
bevy-inspector-egui = "0.18.3"
bevy_splash_screen = "0.3.0"
bevy_tweening = "0.7.0"

[patch.crates-io]
bevy_tweening = { git = "https://github.com/sibsibsib/bevy_tweening", branch = "mirrored_repeat_fix" }
