[package]
name = "fighting-game"
repository = "https://github.com/23marabi/fighting-game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_framepace = "0.12.1"
bevy_rapier2d = { version = "*", features = [ "enhanced-determinism", "debug-render-2d" ] }
bevy-inspector-egui = "0.18.3"
bevy_splash_screen = "0.3.0"
bevy_tweening = "0.7.0"
bevy_easings = "0.10.0"
bevy_kira_audio = { version = "0.15.0", features = [ "mp3", "wav" ] }
bevy_proto = "0.9.0"
bevy_titan = "0.2.0"
bevy-discord-presence = "0.4.1"
ignore = "0.4.20"
config = { version = "0.13.3", default-features = false, features = [ "ron" ] }
serde_derive = "1.0.163"
serde = "1.0.163"
clap = { version = "4.2.7", features = [ "unicode", "derive" ] }
human-panic = "1.1.4"
ahash = "0.8.3"
bevy-debug-text-overlay = "5.1.0"
strum_macros = "0.24.3"
bevy_qoi = "0.1.0"
envmnt = "0.10.4"

[patch.crates-io]
bevy_tweening = { git = "https://github.com/sibsibsib/bevy_tweening", branch = "mirrored_repeat_fix" }

[features]
dev = ["bevy/bevy_dylib"]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = ["bevy/animation", "bevy/bevy_asset", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_gltf", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/png", "bevy/hdr", "bevy/zstd", "bevy/x11", "bevy/ktx2", "bevy/filesystem_watcher", "bevy/tonemapping_luts", "bevy/wayland"]
